# backon

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUDITORIA_BUGS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  benchmarks.py  coverage.xml  index.html  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  feature.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  codeql.yml   coverage.yml  deploy.yml  publish.yml  release.yml  stale.yml
assets/: lobsters_post.md  rpython_post.md
backon/: __init__.py  _async.py  _circuit_breaker.py  _common.py  _conditions.py  _context.py  _decorator.py  _hedging.py  _instrumentation.py  _jitter.py  _rate_limiter.py  _retry.py  _state.py  _sync.py  _testing.py  _trio.py  _typing.py  _wait_gen.py  types.py
backon/_retry/: __init__.py  _api.py  _classes.py  _decide.py  _fast.py  _helpers.py  _inner.py  _loops.py
css/: style.css
docs/: api.html  api.rst  conf.py  index.rst  requirements.txt
site/docs/: advanced.html  changelog.html  quickstart.html
site/js/: main.js
tests/: test_advanced_features.py  test_assertions.py  test_attempt_timeout.py  test_backon.py  test_backon_async.py  test_backon_predicate.py  test_backon_sync.py  test_circuit_breaker.py  test_context.py  test_coverage_gaps.py  test_coverage_v4.py  test_dynamic_backoff.py  test_edge_cases.py  test_fast_path.py  test_features.py  test_generator_retry.py  test_hedging.py  test_instrumentation.py  test_jitter.py  test_new_exports.py  test_rate_limiter.py  test_retry.py  test_retry_call_state.py  test_retry_with.py  test_retrying_caller.py  test_structlog_metrics.py  test_trio.py  test_types.py  test_typing.py  test_wait_combine.py  test_wait_gen.py
