[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "backon"
version = "3.1.0"
description = "Function decoration for backoff and retry"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["retry", "backoff", "decorators"]
authors = [
    {name = "Llucs", email = "c307lucas@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/Llucs/backon"
repository = "https://github.com/Llucs/backon"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.6",
    "mypy>=1.11",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = false
ignore_missing_imports = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
