[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "backon"
version = "3.7.3"
description = "Function decoration for backoff and retry"
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["retry", "backoff", "decorators"]

authors = [
    { name = "Llucs", email = "c307lucas@gmail.com" },
]

dependencies = []

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Llucs/backon"
Repository = "https://github.com/Llucs/backon"
Issues = "https://github.com/Llucs/backon/issues"

[tool.pdm]
distribution = true

[tool.pdm.overrides]
author = "Llucs"
author_email = "c307lucas@gmail.com"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.6",
    "mypy>=1.11",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
]

[tool.coverage.run]
source = ["backon"]
omit = ["backon/_async.py", "backon/_sync.py", "backon/_hedging.py", "backon/_instrumentation.py", "backon/_testing.py", "backon/_trio.py"]
branch = true
command_line = "-m pytest"

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_empty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]